--- a/index.html
+++ b/index.html
@@ -13,5 +13,5 @@
 <link rel="stylesheet" href="styles.a598749ab285e8324c89.css"></head>
 <body>
   <app-root></app-root>
-<script type="text/javascript" src="runtime.a5dd35324ddfd942bef1.js"></script><script type="text/javascript" src="polyfills.3eb7881d3a00da6c675e.js"></script><script type="text/javascript" src="main.7b44b7b1eae64e788469.js"></script></body>
+<script type="text/javascript" src="https://cduplooy.github.io/pazoozle-pub/runtime.a5dd35324ddfd942bef1.js"></script><script type="text/javascript" src="https://cduplooy.github.io/pazoozle-pub/polyfills.3eb7881d3a00da6c675e.js"></script><script type="text/javascript" src="https://cduplooy.github.io/pazoozle-pub/main.7b44b7b1eae64e788469.js"></script></body>
 </html>
