--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-<link rel="stylesheet" href="styles.a598749ab285e8324c89.css"></head>
+<link rel="stylesheet" href="https://cduplooy.github.io/pazoozle-pub/styles.a598749ab285e8324c89.css"></head>
 <body>
   <app-root></app-root>
 <script type="text/javascript" src="https://cduplooy.github.io/pazoozle-pub/runtime.a5dd35324ddfd942bef1.js"></script><script type="text/javascript" src="https://cduplooy.github.io/pazoozle-pub/polyfills.3eb7881d3a00da6c675e.js"></script><script type="text/javascript" src="https://cduplooy.github.io/pazoozle-pub/main.7b44b7b1eae64e788469.js"></script></body>
